# claudius

./: .gitignore  README.md  package.json
docs/assets/: _hero-mockup.html
docs/plans/: 2026-05-22-claude-desktop-manager-design.md  2026-05-22-claude-desktop-manager.md  2026-05-27-content-library-grid.md  2026-05-27-share-redesign.md
frontend/: index.html  package.json  tailwind.config.cjs  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Toolbar.tsx
frontend/src/components/profiles/: ProfileSidebar.tsx
frontend/src/components/share/: CodeHistoryCard.tsx  ComingSoonPane.tsx  CoworkSkillsTable.tsx  HistoryTable.tsx  McpServerTable.tsx  PairSelector.tsx  PreferencesTable.tsx  ShareTable.tsx  ShareTabs.tsx
frontend/src/components/ui/: badge.tsx  checkbox.tsx  select.tsx  tabs.tsx  tooltip.tsx
frontend/src/hooks/: useTheme.ts  useToast.ts
frontend/src/lib/: api.ts
src/: cli.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
